# metaquant

./: .gitignore  CLAUDE.md  EXPERIMENTS_IMPLEMENTATION.md  LICENSE  README.md  README_PARAMETER_OPTIMIZATION.md  TODO.md  VALUE_MOMENTUM_EXTENDED_BACKTEST_REPORT.md  VALUE_MOMENTUM_OPTIMIZATION_SUMMARY.md  pyproject.toml
config/: base.yaml  logging.yaml  value_momentum_extended_universe.txt  value_momentum_test_universe.txt
core/: cli.py  config.py
core/backtest/: engine.py  portfolio.py
core/data_access/: duckdb_adapter.py
core/evaluation/: metrics.py  reports.py
core/experiments/: __init__.py  comparison.py  engine.py  schema.py
docs/: PARAMETER_OPTIMIZATION.md  PARAMETER_OPTIMIZATION_CHEATSHEET.md  runtime_and_nodes.md
examples/: parameter_optimization_example.ps1  parameter_optimization_example.sh
experiments/: README.md  daily_equities_example.yaml  example_comprehensive.yaml  example_model_comparison.yaml  example_parameter_sweep.yaml  value_momentum_4year_extended.yaml  value_momentum_5year_extended.yaml  value_momentum_optimize_v1.yaml  value_momentum_optimized_configs.yaml  value_momentum_practical_test.yaml  value_momentum_quick_test.yaml
scripts/: README_OPTIONS.md  analyze_param_stability.py  fetch_fred_unemployment.py  fetch_yfinance_equities.py  fetch_yfinance_options.py  generate_param_sweep.py  generate_walk_forward.py  ingest_csv_to_duckdb.py  init_duckdb_schema.py  init_model_results_schema.py  migrate_sqlserver_to_duckdb.py  update_sector_data.py
tests/: conftest.py  test_experiments.py  test_registry.py  test_runtimes.py
(+33 files in other folders)
